Fix banner overflow. Fix section word wrap and styling.

--- a/src/components/Banner.module.scss
+++ b/src/components/Banner.module.scss
@@ -8,6 +8,7 @@
     background-color: rgb(146, 127, 255);
     border-radius: 0.5rem;
     word-break: break-all;
+    overflow: hidden;
 }
 
 .name {
@@ -18,7 +19,7 @@
     text-align: left;
     flex-grow: 1;
     color: var(--light);
-    font-size: 3rem;
+    font-size: 4rem;
     text-shadow: 0px 0px 0px transparent, 0 0 1em blue, 0 0 0.2em blue;
 }
 
